@@ -1,0 +1,4 @@
+This is a mock package to be used in sbozyp test code.
+
+Depends on sbozyp-recursive-dep-A and sbozyp-recursive-dep-B.
+
