@@ -1,0 +1,10 @@
+PRGNAM="sbozyp-depends-on-recursive-deps"
+VERSION="1.0"
+HOMEPAGE="https://github.com/NicholasBHubbard/sbozyp/releases/tag/SbozypFakeRelease-1.0"
+DOWNLOAD="https://github.com/NicholasBHubbard/sbozyp/archive/refs/tags/SbozypFakeRelease-1.0.tar.gz"
+MD5SUM="1973a308d90831774a0922e9ec0085ff"
+DOWNLOAD_x86_64=""
+MD5SUM_x86_64=""
+REQUIRES="sbozyp-recursive-dep-A sbozyp-recursive-dep-B"
+MAINTAINER="Nicholas Hubbard"
+EMAIL="nicholashubbard@posteo.net"
