@@ -1,5 +1,6 @@
 0.5.0  TBD
 
+   - Add -o query flag to print a packages dependents
    - The -p query flag no longer causes exit if pkg not installed
 
 0.4.2  2025-08-22
